GCA-100 fix available trainers
